Fixed an obsolete URL reference.

--- a/gobotany/site/templates/gobotany/home.html
+++ b/gobotany/site/templates/gobotany/home.html
@@ -66,7 +66,7 @@
                 botany for science students and beginning and amateur
                 botanists. Professors, teachers, and environmental educators
                 can share curricula and teaching ideas.</p>
-                <a class="learn-more" href="{% url teaching %}" >Learn More</a>
+                <a class="learn-more" href="{% url site-teaching %}" >Learn More</a>
             </div>
             <div id="potd">
             {% if plant_of_the_day %}
