New CSS/templates: bring over legal notification pages. (#215)

--- a/gobotany/simplekey/templates/simplekey/_footer.html
+++ b/gobotany/simplekey/templates/simplekey/_footer.html
@@ -24,8 +24,8 @@
                     </ul>
                     <h6>Legal</h6>
                     <ul class="legal">
-                        <li><a href="{% url privacy-policy %}">Privacy Policy</a></li>
-                        <li><a href="{% url terms-of-use %}">Terms of Use</a></li>
+                        <li><a href="{% url site-privacy %}">Privacy Policy</a></li>
+                        <li><a href="{% url site-terms-of-use %}">Terms of Use</a></li>
                     </ul>
                 </div>
 
