--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -371,14 +371,6 @@ footer .support { margin-right: 0; padding: 18px 0; }
 /* Shadowbox close button */
 #sb-nav-close { background-position: center; background-repeat: no-repeat; padding: 4px; /* Increase activation area a bit */ right: -28px !important; /* Place at top right, but not exactly at the corner so as to avoid Flash video z-index problem */ top: 6px !important; }
 
-/* Styles for legal notification pages */
-.legal #main h3 { margin: 8px 0; }
-.legal #main p + p, .legal #main p + ul { margin-top: 8px; }
-.legal #main ol.terms { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 24px; list-style-type: upper-roman; margin-top: 0; }
-.legal #main ol.terms ul { list-style-type: disc; }
-.legal #main ol.terms li p, .legal #main ol.terms li li { font-family: Verdana, Geneva, sans-serif; font-size: 12px; }
-.legal #main ol.terms li li { line-height: 20px; }
-
 /* Imports for various pages, sections, features, etc. Each of these can contain their own media queries. */
 /* Home */
 #home { background: url(/static/images/layout/body-home.jpg) repeat-x left top #f3f3c3; }
@@ -588,6 +580,21 @@ footer .support { margin-right: 0; padding: 18px 0; }
   #advanced-map .plant-group:hover .frame { border: 5px solid rgba(255, 255, 255, 0.8); }
   #advanced-map .plant-group:hover h3 { background: inherit; color: #508e31; } }
 /* End media queries styles for the About section */
+/* Styles for legal notification pages */
+.legal #main h3 { margin: 8px 0; }
+.legal #main p + p, .legal #main p + ul { margin-top: 8px; }
+.legal #main ol.terms { font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 24px; list-style-type: upper-roman; margin-top: 0; }
+.legal #main ol.terms ul { list-style-type: disc; }
+.legal #main ol.terms li p, .legal #main ol.terms li li { font-family: Verdana, Geneva, sans-serif; font-size: 12px; }
+.legal #main ol.terms li li { line-height: 20px; }
+
+/* Begin media queries styles for the legal notification pages. */
+/* Portrait-orientation styles */
+/* Landscape-orientation styles */
+/* These styles are common to both smartphone widths */
+/* These styles apply to smartphones and tablets */
+@media only screen and (max-width: 1024px) { .legal #main ol.terms { font-size: 18px; padding-left: 32px; } }
+/* End media queries styles for the legal notification pages */
 /* Finally, include global media queries for smartphones and tablets. These should be last. */
 /* Begin global media queries styles.  So far there are three sections for smartphones (two fixed-width layouts to cover portrait and landscape orientations, with a section common to both orientations) and some additional styles for tablets. Using fixed-width layouts allows some pages to have a wider central content area for now. Various SASS "partials" (_home.scss, _about.scss, etc.) have their own media queries arranged like the ones below. Think of those as modular extensions to these. */
 /* Portrait-orientation styles */
