--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -343,6 +343,7 @@ header nav #search-suggest .menu span { font-weight: normal; }
 .content { padding: 8px 0 0; }
 .content .container { margin: 0 auto; padding: 0 10px; width: 960px; }
 .content #main { background: url(/static/images/layout/sidebar-bg.png) repeat-y; float: right; min-height: 500px; padding-bottom: 24px; padding-left: 250px; width: 710px; }
+.content .container.no-sidebar #main { background: none; float: none; min-height: none; padding-left: 0; width: auto; }
 .content #sidebar { border-top: 1px solid #c3d941; float: left; height: 100%; margin-right: -230px; padding: 16px 0; width: 230px; }
 .content #sidebar .section { padding: 0 17px 16px; }
 .content #sidebar .section h4 { margin: 0 0 5px 0; }
@@ -462,6 +463,65 @@ footer .support { margin-right: 0; padding: 18px 0; }
   #home .donate p { margin: 8px; padding: 0; }
   #home .donate a { float: none; margin: 6px 0; position: static; } }
 /* End media queries styles for the Home page */
+/* Dichotomous Key */
+/* Definitions */
+.orange-button, #dkey #main .offer-help-aside a, #dkey #main ul.couplets a.button, #dkey #main a.show-all-button { min-width: 10em; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; -webkit-box-shadow: 0px 1px 4px #a2a64d; -moz-box-shadow: 0px 1px 4px #a2a64d; box-shadow: 0px 1px 4px #a2a64d; border: 1px solid #dc9402; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #dc9402), color-stop(40%, #f0b448), color-stop(100%, #dc9402)); background: -webkit-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -moz-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: -o-linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); background: linear-gradient(top, #dc9402 0%, #f0b448 40%, #dc9402 100%); padding: 0.3em 0.5em; color: white; text-align: center; text-decoration: none; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-weight: bold; line-height: 1.5em; letter-spacing: 0.08333em; }
+.orange-button:hover, #dkey #main .offer-help-aside a:hover, #dkey #main ul.couplets a.button:hover, #dkey #main a.show-all-button:hover { background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #e29b0b), color-stop(32%, #f6be59), color-stop(50%, #f6be59), color-stop(100%, #e39d0e)); background: -webkit-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: -moz-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: -o-linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); background: linear-gradient(top, #e29b0b 0%, #f6be59 32%, #f6be59 50%, #e39d0e 100%); }
+.orange-button.disabled, #dkey #main .offer-help-aside a.disabled, #dkey #main ul.couplets a.disabled.button, #dkey #main a.disabled.show-all-button { border-color: #ecda92; background: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #ecda92), color-stop(32%, #f1e3a6), color-stop(50%, #f1e3a6), color-stop(100%, #ecdb93)); background: -webkit-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: -moz-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: -o-linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); background: linear-gradient(top, #ecda92 0%, #f1e3a6 32%, #f1e3a6 50%, #ecdb93 100%); }
+
+/* Styles */
+#dkey #main { /* Text styles. */ }
+#dkey #main .offer-help-aside { float: right; margin: 1em 1em 0.5em 1em; text-align: right; color: #606060; }
+#dkey #main .offer-help-aside span { font-size: 12px; }
+#dkey #main .offer-help-aside a { display: inline-block; margin: 0.8em 1em; font-weight: normal; font-size: 12px; text-transform: uppercase; }
+#dkey #main .offer-help-aside select { margin: 0.25em 1.0em; }
+@media (min-width: 500px) { #dkey #main .offer-help-aside select { font-size: 12px; } }
+#dkey #main p { margin: 1em 0; max-width: 42em; }
+#dkey #main p .figure { clear: right; float: right; margin-left: 1em; margin-bottom: 1em; width: 16em; font-size: 75%; }
+#dkey #main p .figure a { display: block; margin-bottom: 0.5em; border-bottom: 1px solid black; padding-bottom: 0.5em; }
+#dkey #main p .figure img { width: 16em; /* force thumbnails to a consistent width */ }
+#dkey #main p .figure .number { font-weight: bold; margin-right: 0.5em; }
+#dkey #main p.backlinks { margin-top: 0.57143em; margin-bottom: 0.64286em; font-size: 14px; }
+#dkey #main p.backlinks a { text-decoration: none; margin-right: 0.5em; color: #519136; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; }
+#dkey #main p.backlinks a:hover { text-decoration: underline; }
+#dkey #main ul.couplets { clear: both; margin: 0em; max-width: 48em; padding: 1em 1em 0 0; font-size: 12px; line-height: 1.5em; }
+#dkey #main ul.couplets ul { /* a couplet */ margin: 0em; padding-bottom: 0em; /* override browser default */ padding-left: 2%; /* indent of each level of couplet */ }
+#dkey #main ul.couplets li { /* holds a lead and any <ul> beneath it */ display: block; position: relative; }
+#dkey #main ul.couplets .lead { /* green box */ margin: 0em 0em 1em 0em; border: 2px solid #d9dbb1; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; padding: 1em 1em 1em 1.5em; background-color: #d9dbb1; }
+#dkey #main ul.couplets .lead:after { /* "clear" the float for the button */ display: block; content: " "; height: 0px; clear: both; }
+#dkey #main ul.couplets .letter { /* "1a." or "12b." or whatever */ font-weight: bold; padding-right: 0.5em; }
+#dkey #main ul.couplets .button-block { /* contains what-lies-beneath and button */ float: right; margin: 0em 0em 0.4em 1.2em; text-align: right; }
+#dkey #main ul.couplets a.what-lies-beneath { /* message that sits above the button */ display: inline-block; text-decoration: none; color: #35661c; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-size: 12px; text-transform: uppercase; }
+#dkey #main ul.couplets a.what-lies-beneath:hover { text-decoration: underline; }
+#dkey #main ul.couplets a.button { /* big orange button */ display: inline-block; font-size: 12px; }
+#dkey #main ul.couplets a[href^="#"] { /* links to couplets on the same page */ font-weight: normal; font-style: italic; }
+#dkey #main ul.couplets a.figure-link { /* clickable figure numbers: [Fig. 3] */ color: #35661c; }
+#dkey #main ul.couplets .chosen { border-color: #7abe58; }
+#dkey #main ul.active > li > .lead, #dkey #main ul:target > li > .lead { background-color: #b4d57f; border-color: #7abe58; }
+#dkey #main a.show-all-button { display: inline-block; font-size: 12px; font-weight: normal; }
+#dkey #main .image-type-selector { display: none; /* once images are loaded, our JS will un-hide */ }
+#dkey #main div.taxon-images { margin-left: 0.75em; text-align: center; }
+#dkey #main div.taxon-images figure { margin: 0 1em 1em 0; width: 160px; }
+#dkey #main div.taxon-images img { display: block; margin-bottom: 0.4em; border: 4px solid black; width: 160px; height: 149px; }
+#dkey #main div.taxon-images a { font-size: 12px; text-decoration: none; }
+#dkey #main div.taxon-images a:hover { text-decoration: underline; }
+#dkey #main div.shadow { /* shadow that hides the whole page */ display: none; position: fixed; top: 0; left: 0; height: 100%; width: 100%; background-color: rgba(0, 0, 0, 0.45); text-align: center; }
+#dkey #main div.popup { /* for displaying quick lists of taxa */ display: inline-block; margin: 5% auto; max-height: 90%; overflow-y: auto; overflow-x: hidden; /* otherwise scrolling can leak to page */ border: 0.5em solid #acac90; -webkit-border-radius: 1em; -moz-border-radius: 1em; -ms-border-radius: 1em; -o-border-radius: 1em; border-radius: 1em; background-color: #f5f5d5; padding: 1em 2em; text-align: left; font-size: 12px; line-height: 1.25em; }
+#dkey #main div.popup h2 { /* "See list of 14 species in 1b" */ border-bottom: 1px solid #519136; padding-bottom: 0.5em; color: #519136; font-family: "Trebuchet MS", Helvetica, Arial, sans-serif; font-weight: normal; /* For tall lists a scrollbar appears, and tends to make the last word of the title wrap unattractively. */ white-space: nowrap; }
+#dkey #main div.popup a { text-decoration: none; color: #000; }
+#dkey #main div.popup a:hover { text-decoration: underline; }
+#dkey #main div.popup a:hover { color: #35661c; }
+#dkey #main .distribution-character { /* printed book uses a box */ margin: 0 0.25em; border: 1px solid black; padding: 0 0.25em; font-size: 0.875em; }
+
+/* end #dkey #main */
+/* Begin media queries styles for Dichotomous Key. */
+/* Portrait-orientation styles */
+/* Landscape-orientation styles */
+/* These styles are common to both smartphone widths */
+@media only screen and (max-width: 600px) { #dkey #main .offer-help-aside { float: none; text-align: center; }
+  #dkey #main p.figure { float: none; display: block; margin: 1em auto; } }
+/* These styles apply to smartphones and tablets */
+/* End media queries styles for Dichotomous Key */
 /* About */
 #about #main img { float: right; margin: 5px 0 20px 20px; }
 #about #main img .bookcover { margin-right: 89px; }
