Create initial PlantShare app and empty main page. (#223)

--- a/gobotany/site/templates/gobotany/teaching.html
+++ b/gobotany/site/templates/gobotany/teaching.html
@@ -2,7 +2,7 @@
 
 {% block title %}Teaching{% endblock %}
 
-{% block body_attributes %}id="teaching"{% endblock %}
+{% block body_attributes %}id="teaching" class="teaching"{% endblock %}
 
 {% block js_require %}
     require(['util/mailto'], function (mailto) {
