--- a/gobotany/site/templates/gobotany/_header.html
+++ b/gobotany/site/templates/gobotany/_header.html
@@ -19,14 +19,18 @@
                     <li class="plant-id">
                         <a href="{% url level1 'simple' %}">Simple Key</a>
                     </li>
-                    <li class="plantshare"><a href="{% url plantshare-placeholder %}">PlantShare</a></li>
+                    <li class="plantshare">
+                        {% url ps-main as u %}
+                        {% url plantshare-placeholder as u2 %}
+                        <a {% ifnotequal request.path u %}href="{% url plantshare-placeholder %}"{% else %}{% ifnotequal request.path u2 %}href="{% url plantshare-placeholder %}"{% endifnotequal %}{% endifnotequal %}>PlantShare</a>
+                    </li>
                     <li class="full-key">
                         <a href="{% url full-key-placeholder %}">Full Key</a>
                     </li>
                     <li class="dich-key">
                         <a href="{% url dich-key-placeholder %}">Dichotomous Key</a>
                     </li>
-                    <li class="teaching-tools"><a href="{% url site-teaching %}">Teaching</a></li>
+                    <li class="teaching"><a href="{% url site-teaching %}">Teaching</a></li>
                     <li class="about"><a href="{% url site-about %}">About</a></li>
                 </ul>
                 <div id="search">
