--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -1,9 +1,35 @@
 /* PlantShare */
 
+$section-padding: 16px;
+
 body.plantshare {
+    .join {
+        background-color: #fff;
+        border: 1px solid $border-green;
+        padding: 4px $section-padding $section-padding;
+        width: 475px;
+        ul {
+            line-height: 18px;
+            list-style-position: inside;
+            margin: 10px 0 0 24px;
+        }
+        a {
+            background: transparent url(/static/images/layout/plantshare-btns.png) no-repeat 0 -3px;
+            height: 41px;
+            margin: 12px auto 0;
+            width: 244px;
+            @include offscreen;
+            &:hover {
+                background-position: 0 -88px;
+            }
+            &:active {
+                background-position: 0 -46px;
+            }            
+        }
+    }
+
     #sidebar {
         #login.box {
-            $section-padding: 16px;
             background: $login-box-background-color;
             border: 1px solid $link-green;
             padding: 0;
@@ -59,6 +85,14 @@ body.plantshare {
 }
 /* These styles are common to both smartphone widths */
 @media only screen and (max-width: 600px) {
+    body.plantshare {
+        .join {
+            width: auto;
+            ul {
+                margin-left: 0;
+            }
+        }
+    }
 }
 /* These styles apply to smartphones and tablets */
 @media only screen and (max-width: 1024px) {
