--- a/gobotany/plantshare/templates/plantshare.html
+++ b/gobotany/plantshare/templates/plantshare.html
@@ -11,7 +11,19 @@
     <a href="#login">Log In</a>
 </div>
 
-<p>Hello, world!</p>
+<div class="join">
+    <h2>Join PlantShare!</h2>
+    <p>As a registered member of PlantShare, you will be able to:<p>
+    <ul>
+        <li>Upload photos of plants to share with others</li>
+        <li>Create checklists of plants you want to keep track of</li>
+        <li>Publish the location of the plants you have seen on your own map</i>
+        <li>Ask one of our expert botanists questions</li>
+        <li>Share your thoughts and musings with others</li>
+    </li>
+    <a href="join/">Get Started</a>
+</div>
+
 {% endblock %}
 
 {% block sidebar_content %}
